[package]
name = "hello-rust"
version = "0.1.0"
authors = ["joel <joelimgu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1.5.1"
image = "0.23.14"
ffmpeg-frame-grabber = "0.1.0"
image-visualizer = "0.1.1"
rodio = "0.13.1"
